--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 <body autoscroll="autoscroll">
     <div id="blocks-container"></div>
     <div class="navbar">
-      <div class="title">PORTFOLIO LS 2025<br></div>
+      <div class="title">LAPO SORRIDE<br></div>
       <div class="links">
-        <a href="about.html"></a>
-        <span> &ensp;&ensp;&ensp;channel name &rarr;</span><a href="#" id="channel-link">name-channel-of-reference</a>
+        <a href="https://laposorride.xyz/contact-form">contact</a>
+        <a href="https://laposorride.xyz">&larr; back</a>
+        <span> &ensp;&ensp;&ensp;Portfolio &rarr; 2025</span>
       </div>
     </div>
+
     
     <div id="blocks-container"></div>
     <script src="script.js"></script>
