--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="https://laposorride.xyz/contact-form">contact</a>
         <a href="https://laposorride.xyz">&larr; back</a>
         <span> &ensp;&ensp;&ensp;Portfolio &rarr; 2025</span>
-        <div class="hide" href="#" id="channel-link">//</div>
+        <div class="hide" href="#" id="channel-link" style="display: none;">//</div>
       </div>
     </div>
 
