--- a/script.html
+++ b/script.html
@@ -1,12 +1,42 @@
-   <!-- script.html -->
-   <!DOCTYPE html>
-   <html lang="en">
-   <head>
-       <meta charset="UTF-8">
-       <title>Embedded Script</title>
-       <script src="https://raw.githubusercontent.com/temp478/Lsportfolio/refs/heads/main/script.js"></script>
-   </head>
-   <body>
-       <!-- Any additional HTML content -->
-   </body>
-   </html>
+<!-- script.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Embedded Script</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            color: #333;
+            padding: 20px;
+        }
+        pre {
+            background-color: #fff;
+            border: 1px solid #ccc;
+            padding: 10px;
+            border-radius: 5px;
+            overflow: auto;
+            white-space: pre-wrap; /* Allows wrapping of long lines */
+        }
+    </style>
+    <script src="https://raw.githubusercontent.com/temp478/Lsportfolio/refs/heads/main/script.js"></script>
+</head>
+<body>
+    <h1>JavaScript Code Display</h1>
+    <h2>Contents of script.js:</h2>
+    <pre id="script-content"></pre>
+
+    <script>
+        // Fetch the JavaScript code and display it
+        fetch('https://raw.githubusercontent.com/temp478/Lsportfolio/refs/heads/main/script.js')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('script-content').textContent = data;
+            })
+            .catch(error => {
+                console.error('Error fetching the script:', error);
+            });
+    </script>
+</body>
+</html>
