--- a/script.html
+++ b/script.html
@@ -20,7 +20,7 @@
             white-space: pre-wrap; /* Allows wrapping of long lines */
         }
     </style>
-    <script src="https://raw.githubusercontent.com/temp478/Lsportfolio/refs/heads/main/script.js"></script>
+    <script src="https://raw.githubusercontent.com/temp478/Lsportfolio/refs/heads/main/script.js" defer></script>
 </head>
 <body>
     <h1>JavaScript Code Display</h1>
