--- a/tele_ticker.html
+++ b/tele_ticker.html
@@ -213,7 +213,7 @@
 
   <script>
     // Channel configuration - NO API TOKEN NEEDED!
-    const CHANNEL_USERNAME = "rfrm22q"; 
+    const CHANNEL_USERNAME = "sorridianupdates"; 
     
     // Flag to track if loading is complete
     let contentLoaded = false;
